--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <Title>Booki</Title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/OCR-Projet-2/css/styles.css">
         <script src="https://kit.fontawesome.com/056b7e5332.js" crossorigin="anonymous"></script>
     </head>
     <body>
