--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Header -->
         <header class="flex">
             <div class="logo">
-                <img src="/assets/logo/Booki.png" alt="Logo Booki">
+                <img src="/OCR-Projet-2/assets/logo/Booki.png" alt="Logo Booki">
             </div>
             <nav class="flex">
                 <ul class="flex">
@@ -79,7 +79,7 @@
 
                         <a href="#card1">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Auberge La Canebière</h3>
                                     <p>Nuit à partir de 25€</p>
@@ -95,7 +95,7 @@
                         </a>
                         <a href="#card2">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Hôtel du port</h3>
                                     <p>Nuit à partir de 52€</p>
@@ -111,7 +111,7 @@
                         </a>
                         <a href="#card3">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Hôtel Les mouettes</h3>
                                     <p>Nuit à partir de 76€</p>
@@ -127,7 +127,7 @@
                         </a>
                         <a href="#card4">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Hôtel de la mer</h3>
                                     <p>Nuit à partir de 46€</p>
@@ -143,7 +143,7 @@
                         </a>
                         <a href="#card5">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Auberge Le Panier</h3>
                                     <p>Nuit à partir de 23€</p>
@@ -159,7 +159,7 @@
                         </a>
                         <a href="#card6">
                             <div class="hotel-card">
-                                <img src="/assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="hotel-image">
+                                <img src="/OCR-Projet-2/assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="hotel-image">
                                 <div class="hotel-content">
                                     <h3>Hôtel Chez Amina</h3>
                                     <p>Nuit à partir de 96€</p>
@@ -250,7 +250,7 @@
 
                     <a href="#card10">
                         <div class="activity-card">
-                            <img src="/assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                            <img src="/OCR-Projet-2/assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                             <div class="activity-description flex">
                             <h3>Vieux-Port</h3>
                             </div>
@@ -259,7 +259,7 @@
                     
                     <a href="#card11">
                         <div class="activity-card">
-                            <img src="/assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                            <img src="/OCR-Projet-2/assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                             <div class="activity-description flex">
                             <h3>Fort de Pomègues</h3>
                             </div>
@@ -268,7 +268,7 @@
 
                     <a href="#card12">
                         <div class="activity-card">
-                            <img src="/assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                            <img src="/OCR-Projet-2/assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                             <div class="activity-description flex">
                             <h3>Parc national des Calanques</h3>
                             </div>
@@ -277,7 +277,7 @@
 
                     <a href="#card13">
                         <div class="activity-card">
-                            <img src="/assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                            <img src="/OCR-Projet-2/assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                             <div class="activity-description flex">
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </div>
